<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">_Ptixiaki</string>
    <string name="sms_activity_name">_Messaging</string>
    <string name="display_activity_name">_Map</string>
    <string name="map_activity_name">_MyGoogleMap</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="GPS_settings">Enable GPS</string>
    <string name="app_demo">Demo</string>
    <string name="Location_0">Location 1</string>
    <string name="Location_1">Location 2</string>
    <string name="Location_2">Location 3</string>
    <string name="Location_3">Location 4</string>
    <string name="Location_4">Location 5</string>
    
    <string name="Sensor_On">Enable Sensors</string>
    <string name="Sensor_Off">Disable Sensors</string>
    
    <string name="new_destination">Search Contacts</string>
    <string name="create_group">Create group</string>
    
    <string name="send_via_sms_button">Send via sms</string>
    
    <string name="your_location">CURRENT LOCATION</string>
    
	<string name="Latitude">Latitude:</string>
	<string name="Longitude">Longitude:</string>
	<string name="Address">Address:</string>
	<string name="City">City:</string>
	<string name="State">State:</string>
	<string name="Country">Country:</string>
	<string name="Postal_Code">Postal Code:</string>
	
	<string name="Distance">Distance in meters</string>
	<string name="sender_ID">Sender phone number</string>
    
    <string name="destination_address">To: </string>
    <string name="to">Enter number.</string>
    <string name="phone_number">+306970507260</string>
    <string name="text_message">Text Message: </string>
    <string name="hello_sms">Enter message.</string>
    
    <string name="send_sms_button">Send SMS</string>
    
	
</resources>
