<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/destination_address" />
		
		<EditText
		    android:id="@+id/addrEditText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="phone"
			android:hint="@string/to" />
		<!-- android:text="@string/phone_number" -->
	</LinearLayout>
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_message" />
		
		<EditText
		    android:id="@+id/msgEditText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textCapSentences|textAutoCorrect"
			android:hint="@string/hello_sms"
			android:imeOptions="actionSend" />
	</LinearLayout>
	
	<!-- 
	<Button android:id="@+id/sendSmsBtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/send_sms_button"
	android:onClick="doSend" />
	 -->
	
</LinearLayout>